--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.mockito</groupId>
   <artifactId>MockitoPOC</artifactId>
   <packaging>war</packaging>
-  <version>0.0.2-SNAPSHOT</version>
+  <version>0.0.1</version>
   <name>MockitoPOC</name>
   <url>http://maven.apache.org</url>
   <dependencies>
